@@ -5,7 +5,7 @@ WriteMakefile(
     'NAME'          => 'WWW::Mechanize::FireFox',
     'LICENSE'       => 'perl',
     'VERSION_FROM'  => 'lib/WWW/Mechanize/FireFox.pm', # finds $VERSION
-    'PREREQ_PM'     => { 'MozRepl::RemoteObject' => 0.09,
+    'PREREQ_PM'     => { 'MozRepl::RemoteObject' => 0.10,
                         'URI' => 0,
                         'HTTP::Response' => 0, # for interface compatibility with WWW::Mechanize
                         'HTML::Selector::XPath' => 0,
