@@ -1,5 +1,9 @@
 0.11 200911xx
+    . Implement real HTTP response codes instead of the faked
+      response codes.
     * Fix a memory leak/cycle that prevented tabs from closing
+    . Now needs MozRepl::RemoteObject 0.10 for the API to deregister
+      callbacks.
 
 0.10 200911xx
     . implemented ->form_name, ->form_id, ->form_number
